--- a/templates/user_setup.sh.j2
+++ b/templates/user_setup.sh.j2
@@ -1,2 +1,11 @@
-bin/tootctl accounts create ait --email ait@cyberrange.at --confirmed --role admin
+#!/bin/bash
 
+if [[ -f "/opt/pleroma/.user_setup_done" ]]; then
+  exit 0
+fi
+
+sleep 7
+
+./bin/pleroma_ctl user list | grep -qe '^{{ admin_user.split('@')[0] }}' && exit 0
+
+./bin/pleroma_ctl user new {{ admin_user.split('@')[0] }} {{ admin_user }} --bio "Admin" --name "Admin" --password "{{ admin_password }}" --admin --assume-yes
