--- a/templates/.env.production.j2
+++ b/templates/.env.production.j2
@@ -3,24 +3,9 @@ POSTGRES_USER=mastodon
 POSTGRES_DB=mastodon
 POSTGRES_PASSWORD=supersecretpassword
 
-REDIS_HOST=redis
-
-LOCAL_DOMAIN={{ server_name }}
-BIND=0.0.0.0
-
-DB_HOST=db
-DB_PORT=5432
-DB_USER=mastodon
-DB_NAME=mastodon
-DB_PASS=supersecretpassword
-
-# Generate with ```
-# $ podman run --rm -it --entrypoint /bin/bash docker.io/tootsuite/mastodon
-#   $ bundle exec rake secret
-# ```
-
-SECRET_KEY_BASE={{ secret_key }}
-OTP_SECRET={{ otp_secret }}
+DOMAIN={{ server_name }}
+ADMIN_EMAIL={{ admin_user }}
+USE_SOAPBOX={%+ if use_soapbox %}y{% endif %}
 
 SMTP_SERVER={{ global_mail_server }}
 SMTP_PORT=25
