--- a/templates/nginx_default.conf.j2
+++ b/templates/nginx_default.conf.j2
@@ -1,9 +1,5 @@
-upstream backend {
-    server 127.0.0.1:3000 fail_timeout=0;
-}
-
-upstream streaming {
-    server 127.0.0.1:4000 fail_timeout=0;
+upstream phoenix {
+    server 127.0.0.1:4000 max_fails=5 fail_timeout=60s;
 }
 
 server {
@@ -27,19 +23,9 @@ server {
     proxy_set_header Host mastodon.local;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-    proxy_pass http://backend;
-    proxy_buffering off;
-    proxy_redirect off;
-    proxy_http_version 1.1;
-  }
-
-  location /api/v1/streaming {
-    proxy_set_header Host mastodon.local;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Proto https;
-
-    proxy_pass http://streaming;
+    proxy_pass http://phoenix;
     proxy_buffering off;
     proxy_redirect off;
     proxy_http_version 1.1;
