--- a/templates/nginx_default.conf.j2
+++ b/templates/nginx_default.conf.j2
@@ -12,15 +12,15 @@ server {
   listen 443 ssl default_server;
   server_name _;
 
-  ssl_certificate     /etc/ssl/mastodon.crt;
-  ssl_certificate_key /etc/ssl/mastodon.key;
+  ssl_certificate     {{ ssl_cert }};
+  ssl_certificate_key {{ ssl_key }};
 
   keepalive_timeout    70;
   sendfile             on;
   client_max_body_size 80m;
 
   location / {
-    proxy_set_header Host mastodon.local;
+    proxy_set_header Host {{ server_name }};
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto https;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
